--- a/portfolio-app/src/app/globals.css
+++ b/portfolio-app/src/app/globals.css
@@ -9,18 +9,7 @@
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
 
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
+  
 
   --tile-start-rgb: 239, 245, 249;
   --tile-end-rgb: 228, 232, 233;
@@ -105,8 +94,22 @@ a {
     color-scheme: dark;
   }
 }
-.NavBar ul { display: flex; list-style: none; justify-content: center;
-  padding: 0; }
-  .NavBar ul li a { padding: 1em; color: inherit; text-transform:
-  uppercase; display: inline-block; text-decoration: none; }
-  .NavBar ul li a.active { font-weight: bold; }
+
+.NavBar ul { 
+  display: flex; 
+  list-style: none; 
+  justify-content: center;
+  padding: 0; 
+}
+
+.NavBar ul li a { 
+  padding: 1em; 
+  color: inherit; 
+  text-transform:uppercase; 
+  display: inline-block; 
+  text-decoration: none; 
+}
+  
+.NavBar ul li a.active {
+     font-weight: bold; 
+  }
