--- a/portfolio-app/src/app/globals.css
+++ b/portfolio-app/src/app/globals.css
@@ -84,17 +84,22 @@ body {
     rgb(var(--background-start-rgb));
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
 }
 
+span {
+  color: #525FE1;
+}
+a {
+  text-transform: none;
+}
+h2 {
+  text-align: center;
+  text-transform: uppercase;
+}
 .NavBar ul { 
   display: flex; 
   list-style: none; 
@@ -109,7 +114,6 @@ a {
   display: inline-block; 
   text-decoration: none; 
 }
-  
-.NavBar ul li a.active {
-     font-weight: bold; 
-  }
+
+
+
